# www.extrema.is-code

./: README.md
blog/2021-04-10-running-base-in-a-new-shell/: README.md  demo.sh
blog/2021-04-11-rewrite-when-more-than-n-lines/: README.md  demo.sh
blog/2021-04-12-bash-escaping-issue/: README.md  demo.sh
blog/2021-04-13-bash-escaping-issue-part-2/: README.md  demo.sh
blog/2021-04-15-bash-escaping-issue-part-3/: README.md  demo.sh
blog/2021-04-15-copying-a-bash-environment-to-a-new-shell/: README.md  demo.sh
blog/2021-04-19-abort-transformation/: README.md  demo.sh
blog/2021-05-07-literatex-example-literate-haskell/: Makefile  README.md  prompt.lhs
blog/2021-05-10-decoding-utf8-in-haskell/: Makefile  README.md  bench-bs.hs  bench-bslines.hs  bench-cbs.hs  bench-cbslines.hs  bench-text.cabal  bench-text.hs
blog/2021-05-11-decoding-utf8-in-haskell-part-2/: .gitignore  Lib.hs  Makefile  README.md  bench-cbslines.hs  bench-text.cabal  issue-demo.hs  issue-fix.hs
blog/2021-05-14-encoding-utf8-in-haskell/: .gitignore  Lib.hs  Makefile  README.md  bench-bs.hs  bench-bslines.hs  bench-cbs.hs  bench-cbslines.hs  bench-text.hs  stack.yaml
blog/2021-05-17-minimizing-change/: Change.hs  README.md
blog/2021-07-10-ttc-binary-builder-support/: Main.hs  README.md  ttc-binary-builder-support.cabal
blog/2021-08-20-dark-mode/: README.md  dark-mode-demo.html
blog/2021-09-18-aeson-object-design-part-4/: README.md  bench.cabal  bench.hs  stats.csv  stats.hs
blog/2021-10-20-parsing-bounded-integers/: README.md  parsing.cabal
blog/2021-10-20-parsing-bounded-integers/bench/: Bench.hs
blog/2021-10-20-parsing-bounded-integers/src/: DecimalBounded.hs  DecimalBoundedStrict.hs  DecimalMaxFixed.hs  DecimalMaxSO.hs  DecimalMaxStrict.hs
blog/2021-10-20-parsing-bounded-integers/test/: Spec.hs
blog/2021-10-20-parsing-bounded-integers/test/Decimal/: Test.hs
blog/2021-10-20-parsing-bounded-integers/test/DecimalBounded/: Test.hs
blog/2021-10-20-parsing-bounded-integers/test/DecimalBoundedStrict/: Test.hs
blog/2021-10-20-parsing-bounded-integers/test/DecimalMaxFixed/: Test.hs
blog/2021-10-20-parsing-bounded-integers/test/DecimalMaxSO/: Test.hs
blog/2021-10-20-parsing-bounded-integers/test/DecimalMaxStrict/: Test.hs
blog/2021-10-22-overflow-while-parsing-ipv4-addresses/: HwIP.hs  IP.hs  IPRoute.hs  NetworkIP.hs  README.md
blog/2021-10-25-aeson-2-object-coercion/: README.md  experiment.cabal  l10n.yaml  stack-aeson2-hashmap.yaml  stack-aeson2-map.yaml  stack.yaml
blog/2021-10-25-aeson-2-object-coercion/bench/: Bench.hs
blog/2021-10-25-aeson-2-object-coercion/src/: Experiment.hs  Experiment2.hs
blog/2021-12-02-hmock-with-monadrandom/: Experiment.hs  README.md  experiment.cabal  stack.yaml
blog/2021-12-07-ffi-sync/: README.md  ffi-sync.cabal
blog/2021-12-07-ffi-sync/app/: Main.hs
blog/2021-12-07-ffi-sync/src/: FFISync.hs
blog/2021-12-07-ffi-sync/src/FFISync/: Unistd.hs
blog/2022-01-24-hmock-and-impredicative-polymorphism/: Experiment.FAIL.hs  Experiment.OK.hs  Experiment.hs  README.md
blog/2022-01-26-hmock-and-impredicative-polymorphism-part-2/: Experiment.hs  README.md  stack.yaml
blog/2022-01-31-hmock-matcher-predicates/: Experiment.hs  README.md  experiment.cabal
blog/2022-02-25-color-library-hsv-bug/: README.md  Test.hs
blog/2022-04-04-data-types-a-la-carte/: DTALC.lhs  README.md  dtalc.cabal
blog/2022-06-19-hackage-metadata-part-2/: README.md  hackage-db-revision.hs
blog/2022-06-25-bytestring-literals/: EUC-JP.hs  README.md
blog/2022-07-31-ghc-9.2-alpine-segmentation-fault/: Dockerfile  README.md
blog/2023-03-21-literate-haskell-markdown-headings/: .gitignore  Demo.lhs  README.md  gen-markdown.hs  gen-markdown.sh  lhs-md.cabal
blog/2023-04-23-collapse-sql-whitespace/: README.md  experiment.cabal
blog/2023-04-23-collapse-sql-whitespace/src/: Experiment.hs
blog/2023-04-23-collapse-sql-whitespace/test/: Test.hs
blog/2023-04-25-collapse-sql-whitespace-part-2/: README.md
blog/2023-04-25-collapse-sql-whitespace-part-2/src/: Experiment.hs
blog/2023-04-25-collapse-sql-whitespace-part-2/test/: Test.hs
blog/2023-05-07-staging-with-class/: Experiment.hs  Main.hs  README.md  cabal.project  experiment.cabal  stack.yaml
blog/2024-07-03-haskell-feature-flag-demo/: README.md  cabal.project  feature-flag-demo.cabal
blog/2024-07-03-haskell-feature-flag-demo/app/: demo1.hs  demo2.hs
blog/2024-07-03-haskell-feature-flag-demo/src/Demo1/: FeatureFlag.hs  IO.hs
blog/2024-07-03-haskell-feature-flag-demo/src/Demo1/FeatureFlag/: DB.hs
blog/2024-07-03-haskell-feature-flag-demo/src/Demo2/: FeatureFlag.hs  IO.hs
blog/2024-07-03-haskell-feature-flag-demo/src/Demo2/FeatureFlag/: DB.hs
blog/2024-07-03-haskell-feature-flag-demo/test/: Spec.hs
blog/2024-07-03-haskell-feature-flag-demo/test/Demo1/IO/: Test.hs
blog/2024-07-03-haskell-feature-flag-demo/test/Demo2/IO/: Test.hs
blog/2024-09-11-text-library-lenient-decoding/: README.md  utf16be-lenient.hs
blog/2024-09-17-text-library-equality-bug/: Main.hs  README.md  cabal.project  lazy-text-eq-bug.cabal
