name:           bench
version:        0.0.0.0
cabal-version:  1.24
build-type:     Simple

executable bench
  main-is: bench.hs
  build-depends:
      base
    , containers
    , criterion
    , deepseq
    , text
    , unordered-containers
    , vector
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
