name:           experiment
version:        0.0.0.0
cabal-version:  1.24
build-type:     Simple

executable experiment
  main-is: Main.hs
  other-modules:
      Experiment
  build-depends:
      base
    , template-haskell
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
